--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="Container">
 
-    <img class="imageQR" src="images/image-qr-code.png" alt="">
+    <img class="imageQR" src="image-qr-code.png" alt="">
     <h3>Improve your front-end skills by building projects</h3>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
       <div class="attribution">
